Update and rename index2.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 <title>Matthew Benes Web Development</title>
-<link rel="stylesheet" href="style2.css">
+<link rel="stylesheet" href="style.css">
 
         </head>
 
