--- a/old files/index.html
+++ b/old files/index.html
@@ -11,12 +11,12 @@
         </head>
 
 
-        
+<div class="container-fluid">
+         <h1>Matthew Benes</h1>
+<img src="/home/pwnerman/Documents/Matthew Benes professional portfolio/code.jpg" ></div>
 
-<a href="/HTML-Files/Contact-me.html">Contact Me</a></div>
-<a href="/HTML-Files/My-work.html">My Work</a></div>
-
- <h1>Matthew Benes</h1>
+<div class="topnav-centered"> <a href="">Contact Me</a></div>
+<div class="topnav-centered2"><a href="">My Work</a></div>
 
 <h3>About Me</h3>
 <p>I'm a web programmer and designer from West Michigan. I have been coding for years. I'd love to take on any possible project.</p>
