--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <a href="/HTML-Files/Contact-me.html">Contact Me</a></div>
 <a href="/HTML-Files/My-work.html">My Work</a></div>
 
-<img src="Modern Mind Files/modern-mind-high-resolution-color-logo-banner.png" alt="Logo" style="width:100%; height:25%">
+<img src="Modern Mind Files/modern-mind-high-resolution-color-logo-banner.png" alt="Logo" style="width:100%; height:auto">
 
 <h3>About Me</h3>
 <p>I'm a web programmer and designer from West Michigan. I have been coding for years. I'd love to take on any possible project.</p>
