--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
 <body>
         <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 <title>Matthew Benes Web Development</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="styles.css">
 
         </head>
 
 
         
-
+<section class="welcome-section" id="welcome-section">
 <a href="/HTML-Files/Contact-me.html">Contact Me</a></div>
 <a href="/HTML-Files/My-work.html">My Work</a></div>
 
-<img src="Modern Mind Files/modern-mind-high-resolution-color-logo-banner.png" alt="Logo" style="width:100%; height:auto">
+<!--<img src="Modern Mind Files/modern-mind-high-resolution-color-logo-banner.png" alt="Logo" style="width:100%; height:auto"> -->
+<h1>Modern Mind</h1>
+<h4>Minimalist Web Design, Done Right</h3>
 
 <h3>About Me</h3>
 <p>I'm a web programmer and designer from West Michigan. I have been coding for years. I'd love to take on any possible project.</p>
@@ -24,5 +25,18 @@
 <h3>What I Provide</h3>
 <h4>Website Development, Design, and Deployment</h4>
 <p>I offer top of line design website design and development. I start with your product of choice. If the product is for a tech company. I make a futuristic UX/UI that fits the theme of the products. We can review the UI together and make the necessary changes to your vision. Then I can proceed with the creation of the website. I take time to provide a safe, secure, and amazing website.</p>
-
+</section>
+<section class="projects" id="projects">
+<a href="katelyns-swim-lessons.github.io
+" target="_blank" class="project project-tile">
+          <p class="project-title">
+            Tribute Page
+          </p>
+        </a>   
+        <a href="#" target="_blank" class="project project-tile">
+          <p class="project-title">
+            This Website
+          </p>
+        </a>  
+</sections>
 </body>
