--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 <title>Matthew Benes Web Development</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="style.css">
 
         </head>
 
 
         
-<section class="welcome-section" id="welcome-section">
-<a href="/HTML-Files/Contact-me.html">Contact Me</a></div>
+<navbar class="navbar" id="navbar">
+<a href="#">About</a></div>
 <a href="/HTML-Files/My-work.html">My Work</a></div>
-
+<section class="welcome-section" id="welcome-section">
 <!--<img src="Modern Mind Files/modern-mind-high-resolution-color-logo-banner.png" alt="Logo" style="width:100%; height:auto"> -->
 <h1>Modern Mind</h1>
-<h4>Minimalist Web Design, Done Right</h3>
-
+<br>
+<h4>Minimalist Web Design, Done Right</h4>
+</section>
+        <section class="about-section" id="about-section">
 <h3>About Me</h3>
 <p>I'm a web programmer and designer from West Michigan. I have been coding for years. I'd love to take on any possible project.</p>
 <p> I strive to have fair pricing and deliver tenfold on the quality of the said product. A website from me will help with outreach and sales of your product or service</p>
@@ -30,13 +32,17 @@
 <a href="katelyns-swim-lessons.github.io
 " target="_blank" class="project project-tile">
           <p class="project-title">
+
             Tribute Page
+
           </p>
         </a>   
-        <a href="#" target="_blank" class="project project-tile">
-          <p class="project-title">
-            This Website
-          </p>
-        </a>  
 </sections>
+        <h1 id="profile-header">Reach Out Here</h1>
+        <section id="profile-links">
+        <a href="modern-mind@gmail.com" target="_blank" id="profile-link">Email Me</a>
+        <a href="" target="_blank" id="profile-link">Twitter</a>
+        <a href="" target="_blank" id="profile-link">Instagram</a>
+        <a href="" target="_blank" id="profile-link">GitHub</a>
+        </section>
 </body>
