--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p> I strive to have fair pricing and deliver tenfold on the quality of the said product. A website from me will help with outreach and sales of your product or service</p>
 <h3>What I Provide</h3>
 <h4>Website Development, Design, and Deployment</h4>
-<p>I offer top of line design website design and development. I start with your product of choice. If the product is for a tech company. I make a futuristic UX/UI that fits the theme of the products. We can review the UI together and make the necessary changes to your vision. Then I can proceed with the creation of the website. I take time to provide a safe, secure, and amazing website.</p>
+<p>I offer top-of-the-line design website design and development. I start with your product of choice. If the product is for a tech company.<br> I make a futuristic UX/UI that fits the theme of the products. We can review the UI together and make the necessary changes to your vision. <br> Then I can proceed with the creation of the website. I take time to provide a safe, secure, and amazing website.</p>
 </section>
 <section class="projects" id="projects">
 <a href="katelyns-swim-lessons.github.io
