--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
 <section class="projects" id="projects">
 <a href="katelyns-swim-lessons.github.io
 " target="_blank" class="project project-tile">
+        <img src="/logo-no-background.svg">
           <p class="project-title">
-
             Tribute Page
-
           </p>
         </a>   
 </sections>
