--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <navbar class="navbar" id="navbar">
 <a href="#">About</a></div>
 <a href="/HTML-Files/My-work.html">My Work</a></div>
+</navbar>
 <section class="welcome-section" id="welcome-section">
 <!--<img src="Modern Mind Files/modern-mind-high-resolution-color-logo-banner.png" alt="Logo" style="width:100%; height:auto"> -->
 <h1>Modern Mind</h1>
