--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <body>
         <head>
+                <title>Matthew Benes Web Development</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-<title>Matthew Benes Web Development</title>
 <link rel="stylesheet" href="/style.css">
 
         </head>
@@ -12,8 +12,8 @@
 
         
 <navbar class="navbar" id="navbar">
-<a href="#">About</a></div>
-<a href="/HTML-Files/My-work.html">My Work</a></div>
+<a href="#">About</a>
+<a href="/HTML-Files/My-work.html">My Work</a>
 </navbar>
 <section class="welcome-section" id="welcome-section">
 <!--<img src="Modern Mind Files/modern-mind-high-resolution-color-logo-banner.png" alt="Logo" style="width:100%; height:auto"> -->
@@ -32,17 +32,17 @@
 <section class="projects" id="projects">
 <a href="katelyns-swim-lessons.github.io
 " target="_blank" class="project project-tile">
-        <img src="/logo-no-background.svg">
+        <img src="/logo-no-background.svg" alt="Miss.Katelyn's Swim Lesson Logo>
           <p class="project-title">
-            Tribute Page
+           Miss. Katelyn's Swim Lessons
           </p>
         </a>   
-</sections>
+</section>
         <h1 id="profile-header">Reach Out Here</h1>
         <section id="profile-links">
-        <a href="modern-mind@gmail.com" target="_blank" id="profile-link">Email Me</a>
-        <a href="" target="_blank" id="profile-link">Twitter</a>
-        <a href="" target="_blank" id="profile-link">Instagram</a>
-        <a href="" target="_blank" id="profile-link">GitHub</a>
+        <a href="modern-mind@gmail.com" target="_blank" id="email-link">Email Me</a>
+        <a href="" target="_blank" id="twitter-link">Twitter</a>
+        <a href="" target="_blank" id="insta-link">Instagram</a>
+        <a href="" target="_blank" id="github-link">GitHub</a>
         </section>
 </body>
