--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 <p>I offer top-of-the-line design website design and development. I start with your product of choice. If the product is for a tech company.<br> I make a futuristic UX/UI that fits the theme of the products. We can review the UI together and make the necessary changes to your vision. <br> Then I can proceed with the creation of the website. I take time to provide a safe, secure, and amazing website.</p>
 </section>
 <section class="projects" id="projects">
-<a href="katelyns-swim-lessons.github.io
-" target="_blank" class="project project-tile">
+<a href="katelyns-swim-lessons.github.io" target="_blank" class="project project-tile">
         <img src="/logo-no-background.svg" alt="Miss.Katelyn's Swim Lesson Logo>
           <p class="project-title">
            Miss. Katelyn's Swim Lessons
