--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </section>
 <section class="projects" id="projects">
 <a href="https://katelyns-swim-lessons.github.io/index.html" target="_blank" class="project project-tile">
-        <img src="/logo-no-background.svg" alt="Miss.Katelyn's Swim Lesson Logo>
+        <img src="/logo-no-background.svg" alt="Miss.Katelyn's Swim Lesson Logo> <br>
           <p class="project-title">
            Miss. Katelyn's Swim Lessons
           </p>
